
	* lib/Majordomo.pm:  (standard_subs)  Incorporate
	ARCURL into the standard substitutions.

	* lib/Mj/Archive.pm:  (new, _split_name)  Sort archive
	file names, accounting for sublists, quarter-years, 
	and two-digit years. 
	(_secs_start, _secs_end)  Support two-digit years.
	Suggested by Brock Rozen.
	(_parse_message_range)  Eliminate potential infinite loop.

2002-02-06  Michael Yount <csf@moscow.com>

	* lib/Mj/Archive.pm:  (_write_counts)  Remove database
	files for archives with no messages.
	(summary)  Ignore archives with no messages.  Suggested
	by Brock Rozen.
       
2002-02-05  Michael Yount <csf@moscow.com>

	* bin/mj_shell:  Add editor support for the archive-part-edit
	command.

	* bin/mj_wwwadm, mj_wwwusr:  Add "raw" message part support
	for the archive-part-* commands.

	* lib/Majordomo.pm:  Version number is now 0.1200202050.
	(archive_start)  Add support for the archive-part-*
	commands, which allow individual message parts to be
	viewed, changed, or deleted.

	* lib/Mj/Access.pm:  (list_access_check)  Quell delay warning.
	Thanks to Brock Rozen.

	* lib/Mj/Archive.pm:  (remove)  Give two return values,
	the status and the data or error message.
	(replace)  New routine.  Replace a particular message
	with the contents of a file.

	* lib/Mj/CommandProps.pm:  Add support for the archive-part-*
	commands.

	* lib/Mj/Format.pm:  (_archive_part)  New routine.  Add support
	for the archive-part-* commands.
	(tokeninfo)  Bugfix:  Perform substitutions after retrieving
	the headers.
	(g_get)  Bugfix:  Use a value of 1000 if no chunksize is given.

	* lib/Mj/List.pm:  (archive_get_data)  Wrapper for
	Mj::Archive::get_data().
	(archive_replace_msg)  Wrapper for Mj::Archive::replace().
	(archive_delete_msg)  Adjust for new return values.
	(digest_sync)  Resynchronize more judiciously.

	* lib/Mj/MIMEParser.pm:  (collect_data)  Quell warning.
	Thanks to Brock Rozen.

	* lib/Mj/Resend.pm:  (_post)  Change the ARCNO substitution
	to MSGNO.
